# openapi_servereless_adapter

./: pyproject.toml
openapi_serverless_adapter/: adapter.py
openapi_serverless_adapter_YOUR_USERNAME_HERE.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/openapi_serverless_adapter/: fixture_lambda.py  petstore.json  serverless.yml  test_adapter.py
