[tool.poetry]
name = "openapi_serverless_adapter"
version = "0.1.0"
description = ""
authors = ["Bartosz Bialek"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.2"
python-dateutil = "^2.8"
urllib3 = "^1.25"
certifi = "^2019.11"

[tool.poetry.dev-dependencies]
pytest = "^5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
